--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
 		<title>Flappy Bub!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="icon" href="img/bub.png">
 	</head>
 	<body>
-		<h1>TODO: make Mr. Bub fly between the pipes. You might want to add more resources to the img folder, or shrink him down so that he fits better.</h1>
+		<h1>Flappy Bub, Flap Flap Flap</h1>
 		<br><br>
 		
-		<img src="img/bub.png" alt="Mister Bub" width="200px">
-		<br><br>
+		<canvas id="canvas" width="288" height="512">Your browser does not support the canvas tag. Sad!</canvas>
+		<script src="main.js"></script>
 		
-		<script type="text/javascript" src="main.js"></script>
-		<div id="game">
-			<canvas>Your browser does not support the canvas tag.</canvas>
-			<br>
-			<button type="button" onclick="run()" ><b>GO</b></button>
-		</div>
 		<br><br>
 		<footer>
 			<hr width="80%">
